
    AVRO-1522. Java: Add support for compression codecs to SortedKeyValueFile.
    (Steven Willis via cutting)

    AVRO-1474. C++ resolvind decoder doesn't work when reader schema
    has more fields than writer schema. (thiru with help from Ramana
    Suvarapu)

    AVRO-1352. Schema for fixed types corrupted when writing out in
    JSON format (Steve Roehrs via thiru)

  OPTIMIZATIONS

    AVRO-1455. Deep copy does not need to create new instances for primitives.
    (tomwhite)

  IMPROVEMENTS

    AVRO-1441. Java: Improve documentation for Maven configuration.
    (Jesse Anderson via cutting)

    AVRO-1447. Java: Remove dead code from example in documentation.
    (Jesse Anderson via cutting)

    AVRO-1449. Java: Optionally validate default values while reading schemas.
    (cutting)    

    AVRO-1472. Java: Clarify parse method in getting started guide.
    (Michael Knapp via cutting)

    AVRO-1465. Java: Improve the error message when union dispatch fails.
    (Gabriel Reid via cutting)

    AVRO-1482. In specification, place "null" first in unions as best practice.
    (cutting)

    AVRO-1476. Java: Remove transient declaration from Schema.Field#position.
    (Robert Chu via cutting)

    AVRO-1512. Java: Support Thrift unions. (cutting)

    AVRO-1535. Java: Make the name .X to refer to X in the null namespace.
    This permits aliases to names in the null namespace. (cutting)

  BUG FIXES

    AVRO-1446. C#: Correctly handle system errors in RPC.
    (David Taylor via cutting)

    AVRO-1445. Java: Fix protobuf support to correctly handle enums
    with default values.  (cutting)

    AVRO-1436. C#: Fix tests to run multiple times. (David Taylor via cutting)

    AVRO-1458. Java: Setting char record field via reflection affects other
    fields. (tomwhite)

    AVRO-1454. Java: Fix GenericData#toString and AvroAsTextRecordReader
    to generate valid Json for NaN and infinities.  (cutting)
